--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@ margin: auto;
 padding: 30px;
 }
  body {
- 	background-image: url('https://i.pinimg.com/1200x/47/70/cf/4770cf05fe96befcdcd74204ba533198.jpg');
+    background-image: url('https://i.pinimg.com/1200x/47/70/cf/4770cf05fe96befcdcd74204ba533198.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 1600px 2000px; 
@@ -43,6 +43,7 @@ padding: 30px;
 
 <br><b><u>Achievements</u>:</b><br>
  I got a certificate in <b>NPTEL</b> for <b>Problem Solving through Programming in C</b> with aggregate 60%.<br>
+ <a href="C:\Users\makhi\OneDrive\Pictures\chinni.mr.jpg">Click here to view the certificate</a>
 
  <br><b><u>Strength</u>:</b>
  <br>
